@@ -1,0 +1,103 @@
+<Type Name="DoNotCastIntPtrToInt32Rule" FullName="Gendarme.Rules.Interoperability.DoNotCastIntPtrToInt32Rule">
+  <TypeSignature Language="C#" Value="public class DoNotCastIntPtrToInt32Rule : Gendarme.Framework.Rule, Gendarme.Framework.IMethodRule" />
+  <AssemblyInfo>
+    <AssemblyName>Gendarme.Rules.Interoperability</AssemblyName>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+  </AssemblyInfo>
+  <Base>
+    <BaseTypeName>Gendarme.Framework.Rule</BaseTypeName>
+  </Base>
+  <Interfaces>
+    <Interface>
+      <InterfaceName>Gendarme.Framework.IMethodRule</InterfaceName>
+    </Interface>
+  </Interfaces>
+  <Attributes>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.EngineDependency(typeof(Gendarme.Framework.Engines.OpCodeEngine))</AttributeName>
+    </Attribute>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.Solution("You should always use 64 bits integers, signed or unsigned, when computing pointers.")</AttributeName>
+    </Attribute>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.Problem("This method cast a [U]IntPtr to a 32 bits value and this won't work on 64 bits architectures.")</AttributeName>
+    </Attribute>
+  </Attributes>
+  <Docs>
+    <summary>
+            This rule checks for any cast of <code>IntPtr</code> or <code>UIntPtr</code> into a
+            32bits (or smaller) value. <code>IntPtr</code> are generally used to reference a
+            memory location and downcasting them to 32bits will make the code fail on 64bits CPU.
+            </summary>
+    <remarks>To be added.</remarks>
+    <example>
+            Bad example:
+            <code>
+            int ptr = dest.ToInt32 ();
+            for (int i = 0; i &lt; 16; i++) {
+            	Marshal.StructureToPtr (this, (IntPtr)ptr, false);
+            	ptr += 4;
+            }
+            </code></example>
+    <example>
+            Good example:
+            <code>
+            long ptr = dest.ToInt64 ();
+            for (int i = 0; i &lt; 16; i++) {
+            	Marshal.StructureToPtr (this, (IntPtr) ptr, false);
+            	ptr += IntPtr.Size;
+            }
+            </code></example>
+    <example>
+            Bad example:
+            <code>
+            int ptr = dest.ToInt32 ();
+            for (int i = 0; i &lt; 16; i++) {
+            	Marshal.StructureToPtr (this, (IntPtr)ptr, false);
+            	ptr += 4;
+            }
+            </code></example>
+    <example>
+            Good example:
+            <code>
+            long ptr = dest.ToInt64 ();
+            for (int i = 0; i &lt; 16; i++) {
+            	Marshal.StructureToPtr (this, (IntPtr) ptr, false);
+            	ptr += IntPtr.Size;
+            }
+            </code></example>
+  </Docs>
+  <Members>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public DoNotCastIntPtrToInt32Rule ();" />
+      <MemberType>Constructor</MemberType>
+      <AssemblyInfo>
+        <AssemblyVersion>2.1.0.0</AssemblyVersion>
+      </AssemblyInfo>
+      <Parameters />
+      <Docs>
+        <summary>To be added.</summary>
+        <remarks>To be added.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="CheckMethod">
+      <MemberSignature Language="C#" Value="public Gendarme.Framework.RuleResult CheckMethod (Mono.Cecil.MethodDefinition method);" />
+      <MemberType>Method</MemberType>
+      <AssemblyInfo>
+        <AssemblyVersion>2.1.0.0</AssemblyVersion>
+      </AssemblyInfo>
+      <ReturnValue>
+        <ReturnType>Gendarme.Framework.RuleResult</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="method" Type="Mono.Cecil.MethodDefinition" />
+      </Parameters>
+      <Docs>
+        <param name="method">To be added.</param>
+        <summary>To be added.</summary>
+        <returns>To be added.</returns>
+        <remarks>To be added.</remarks>
+      </Docs>
+    </Member>
+  </Members>
+</Type>
