@@ -1,0 +1,89 @@
+<Type Name="PInvokeShouldNotBeVisibleRule" FullName="Gendarme.Rules.Interoperability.PInvokeShouldNotBeVisibleRule">
+  <TypeSignature Language="C#" Value="public class PInvokeShouldNotBeVisibleRule : Gendarme.Framework.Rule, Gendarme.Framework.IMethodRule" />
+  <AssemblyInfo>
+    <AssemblyName>Gendarme.Rules.Interoperability</AssemblyName>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+  </AssemblyInfo>
+  <Base>
+    <BaseTypeName>Gendarme.Framework.Rule</BaseTypeName>
+  </Base>
+  <Interfaces>
+    <Interface>
+      <InterfaceName>Gendarme.Framework.IMethodRule</InterfaceName>
+    </Interface>
+  </Interfaces>
+  <Attributes>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.FxCopCompatibility("Microsoft.Interoperability", "CA1401:PInvokesShouldNotBeVisible")</AttributeName>
+    </Attribute>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.Solution("Reduce the visibility of the p/invoke method and make sure its declared as static.")</AttributeName>
+    </Attribute>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.Problem("P/Invoke declarations should not be visible outside of the assembly.")</AttributeName>
+    </Attribute>
+  </Attributes>
+  <Docs>
+    <summary>
+            This rule checks for PInvoke declaration methods that are visible outside their assembly.
+            </summary>
+    <remarks>To be added.</remarks>
+    <example>
+            Bad example:
+            <code>
+            [DllImport ("user32.dll")]
+            public static extern bool MessageBeep (UInt32 beepType);
+            </code></example>
+    <example>
+            Good example:
+            <code>
+            [DllImport ("user32.dll")]
+            internal static extern bool MessageBeep (UInt32 beepType);
+            </code></example>
+    <example>
+            Bad example:
+            <code>
+            [DllImport ("user32.dll")]
+            public static extern bool MessageBeep (UInt32 beepType);
+            </code></example>
+    <example>
+            Good example:
+            <code>
+            [DllImport ("user32.dll")]
+            internal static extern bool MessageBeep (UInt32 beepType);
+            </code></example>
+  </Docs>
+  <Members>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public PInvokeShouldNotBeVisibleRule ();" />
+      <MemberType>Constructor</MemberType>
+      <AssemblyInfo>
+        <AssemblyVersion>2.1.0.0</AssemblyVersion>
+      </AssemblyInfo>
+      <Parameters />
+      <Docs>
+        <summary>To be added.</summary>
+        <remarks>To be added.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="CheckMethod">
+      <MemberSignature Language="C#" Value="public Gendarme.Framework.RuleResult CheckMethod (Mono.Cecil.MethodDefinition method);" />
+      <MemberType>Method</MemberType>
+      <AssemblyInfo>
+        <AssemblyVersion>2.1.0.0</AssemblyVersion>
+      </AssemblyInfo>
+      <ReturnValue>
+        <ReturnType>Gendarme.Framework.RuleResult</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="method" Type="Mono.Cecil.MethodDefinition" />
+      </Parameters>
+      <Docs>
+        <param name="method">To be added.</param>
+        <summary>To be added.</summary>
+        <returns>To be added.</returns>
+        <remarks>To be added.</remarks>
+      </Docs>
+    </Member>
+  </Members>
+</Type>
