@@ -1,0 +1,102 @@
+<Type Name="UseManagedAlternativesToPInvokeRule" FullName="Gendarme.Rules.Interoperability.UseManagedAlternativesToPInvokeRule">
+  <TypeSignature Language="C#" Value="public class UseManagedAlternativesToPInvokeRule : Gendarme.Framework.Rule, Gendarme.Framework.IMethodRule" />
+  <AssemblyInfo>
+    <AssemblyName>Gendarme.Rules.Interoperability</AssemblyName>
+    <AssemblyVersion>2.1.0.0</AssemblyVersion>
+  </AssemblyInfo>
+  <Base>
+    <BaseTypeName>Gendarme.Framework.Rule</BaseTypeName>
+  </Base>
+  <Interfaces>
+    <Interface>
+      <InterfaceName>Gendarme.Framework.IMethodRule</InterfaceName>
+    </Interface>
+  </Interfaces>
+  <Attributes>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.FxCopCompatibility("Microsoft.Usage", "CA2205:UseManagedEquivalentsOfWin32Api")</AttributeName>
+    </Attribute>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.Solution("Use the suggested managed alternative to your p/invoke call and remove it's declaration.")</AttributeName>
+    </Attribute>
+    <Attribute>
+      <AttributeName>Gendarme.Framework.Problem("There is a potential managed API for the p/invoke declaration.")</AttributeName>
+    </Attribute>
+  </Attributes>
+  <Docs>
+    <summary>
+            This rule warns the developer if certain external (P/Invoke) methods are being
+            called in case they have managed alternatives provided by the .NET framework
+            </summary>
+    <remarks>To be added.</remarks>
+    <example>
+            Bad example:
+            <code>
+            [DllImport ("kernel32.dll")]
+            static extern void Sleep (uint dwMilliseconds);
+            public void WaitTwoSeconds ()
+            {
+            	Sleep (2000);
+            }
+            </code></example>
+    <example>
+            Good example:
+            <code>
+            public void WaitTwoSeconds ()
+            {
+            	System.Threading.Thread.Sleep (2000);
+            }
+            </code></example>
+    <example>
+            Bad example:
+            <code>
+            [DllImport ("kernel32.dll")]
+            static extern void Sleep (uint dwMilliseconds);
+            public void WaitTwoSeconds ()
+            {
+            	Sleep (2000);
+            }
+            </code></example>
+    <example>
+            Good example:
+            <code>
+            public void WaitTwoSeconds ()
+            {
+            	System.Threading.Thread.Sleep (2000);
+            }
+            </code></example>
+  </Docs>
+  <Members>
+    <Member MemberName=".ctor">
+      <MemberSignature Language="C#" Value="public UseManagedAlternativesToPInvokeRule ();" />
+      <MemberType>Constructor</MemberType>
+      <AssemblyInfo>
+        <AssemblyVersion>2.1.0.0</AssemblyVersion>
+      </AssemblyInfo>
+      <Parameters />
+      <Docs>
+        <summary>To be added.</summary>
+        <remarks>To be added.</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="CheckMethod">
+      <MemberSignature Language="C#" Value="public Gendarme.Framework.RuleResult CheckMethod (Mono.Cecil.MethodDefinition method);" />
+      <MemberType>Method</MemberType>
+      <AssemblyInfo>
+        <AssemblyVersion>2.1.0.0</AssemblyVersion>
+      </AssemblyInfo>
+      <ReturnValue>
+        <ReturnType>Gendarme.Framework.RuleResult</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="method" Type="Mono.Cecil.MethodDefinition" />
+      </Parameters>
+      <Docs>
+        <param name="method">To be added.</param>
+        <summary>To be added.</summary>
+        <returns>To be added.</returns>
+        <remarks>To be added.</remarks>
+      </Docs>
+    </Member>
+  </Members>
+</Type>
