@@ -1,0 +1,23 @@
+<Overview>
+  <Assemblies>
+    <Assembly Name="Gendarme.Rules.Interoperability" Version="2.1.0.0">
+      <Attributes>
+        <Attribute>
+          <AttributeName>System.Runtime.CompilerServices.RuntimeCompatibility(WrapNonExceptionThrows=true)</AttributeName>
+        </Attribute>
+      </Attributes>
+    </Assembly>
+  </Assemblies>
+  <Remarks>To be added.</Remarks>
+  <Copyright>To be added.</Copyright>
+  <Types>
+    <Namespace Name="Gendarme.Rules.Interoperability">
+      <Type Name="DoNotCastIntPtrToInt32Rule" Kind="Class" />
+      <Type Name="GetLastErrorMustBeCalledRightAfterPInvokeRule" Kind="Class" />
+      <Type Name="MarshalStringsInPInvokeDeclarationsRule" Kind="Class" />
+      <Type Name="PInvokeShouldNotBeVisibleRule" Kind="Class" />
+      <Type Name="UseManagedAlternativesToPInvokeRule" Kind="Class" />
+    </Namespace>
+  </Types>
+  <Title>Gendarme.Rules.Interoperability</Title>
+</Overview>
