@@ -1,0 +1,6 @@
+<Namespace Name="Gendarme.Rules.Interoperability">
+  <Docs>
+    <summary>To be added.</summary>
+    <remarks>To be added.</remarks>
+  </Docs>
+</Namespace>
